--- a/TCC.ipynb
+++ b/TCC.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "id": "nYiyopm5YCBN"
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 2,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -59,7 +59,21 @@
         "id": "OspvgtAW6f3S",
         "outputId": "8f47afe7-5ee6-4039-f819-d3dfa7a5f430"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#@title Dados de login\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m# Codificando o nome de usuário e a senha em Base64\u001b[39;00m\n\u001b[0;32m      3\u001b[0m username \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mandre.dias\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> 4\u001b[0m password \u001b[39m=\u001b[39m getpass(\u001b[39m'\u001b[39;49m\u001b[39mPassword:\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+            "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\ipykernel\\kernelbase.py:1174\u001b[0m, in \u001b[0;36mKernel.getpass\u001b[1;34m(self, prompt, stream)\u001b[0m\n\u001b[0;32m   1167\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mwarnings\u001b[39;00m\n\u001b[0;32m   1169\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m   1170\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mThe `stream` parameter of `getpass.getpass` will have no effect when using ipykernel\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1171\u001b[0m         \u001b[39mUserWarning\u001b[39;00m,\n\u001b[0;32m   1172\u001b[0m         stacklevel\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m,\n\u001b[0;32m   1173\u001b[0m     )\n\u001b[1;32m-> 1174\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_input_request(\n\u001b[0;32m   1175\u001b[0m     prompt,\n\u001b[0;32m   1176\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_parent_ident[\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[0;32m   1177\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_parent(\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m   1178\u001b[0m     password\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[0;32m   1179\u001b[0m )\n",
+            "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\ipykernel\\kernelbase.py:1234\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1231\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1232\u001b[0m     \u001b[39m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m   1233\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mInterrupted by user\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 1234\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m(msg) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   1235\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[0;32m   1236\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mInvalid Message:\u001b[39m\u001b[39m\"\u001b[39m, exc_info\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ],
       "source": [
         "#@title Dados de login\n",
         "# Codificando o nome de usuário e a senha em Base64\n",
@@ -69,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "N1Pjm0_sbspR"
@@ -141,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "id": "VIdk-1yZ7DZT"
       },
@@ -188,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "qjODI8pn2vpU"
       },
@@ -242,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "id": "rLvbzWUI5Zwx"
       },
@@ -430,13 +444,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Salva os resultados coletados no SYDLE\n",
         "def updateDatabaseObject(sectorLog):\n",
-        "    time.sleep(0.1)\n",
+        "    time.sleep(0.2)\n",
         "    payload = {\n",
         "        \"query\": {\n",
         "            \"term\": {\n",
@@ -459,7 +473,7 @@
         "        requestSydle(\"createSectorStats\", sectorLog)\n",
         "\n",
         "    for user in sectorLog[\"userLogs\"]:\n",
-        "        time.sleep(0.1)\n",
+        "        time.sleep(0.2)\n",
         "        payload = {\n",
         "            \"query\": {\n",
         "                \"term\": {\n",
@@ -508,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -619,7 +633,7 @@
         "        }\n",
         "        # Obtém os logs da classe\n",
         "        classLogs = requestSydle(\"getClassLogs\", payload)\n",
-        "        time.sleep(0.1)\n",
+        "        time.sleep(0.2)\n",
         "        # Calcula a contribuição\n",
         "        getUsersLogs(classLogs)\n",
         "\n",
@@ -646,7 +660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "FJDoDe_o42Wp"
@@ -685,7 +699,7 @@
         "\n",
         "    if listUserStats[\"hits\"][\"total\"] > 0:\n",
         "        for userStat in listUserStats[\"hits\"][\"hits\"]:\n",
-        "            time.sleep(0.1)\n",
+        "            time.sleep(0.2)\n",
         "            normalize_objects(userStat[\"_source\"][\"sectorLogs\"])\n",
         "            payload = {\n",
         "                \"_id\": userStat['_id'],\n",
@@ -700,7 +714,7 @@
         "        raise Exception(\"UserStats vazio\")\n",
         "\n",
         "    for sector in sectorLogs:\n",
-        "        time.sleep(0.1)\n",
+        "        time.sleep(0.2)\n",
         "        if len(sector[\"userLogs\"]) > 0:\n",
         "            normalize_objects(sector[\"userLogs\"])\n",
         "            payload = {\n",
@@ -729,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "id": "PuMvy6NCtLC6"
       },
@@ -778,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "gF9kfzNVHo_Y"
@@ -845,7 +859,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "FqVo2cEm9c2u"
       },
@@ -911,7 +925,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1358,12 +1372,12 @@
         "}\n",
         "\n",
         "requestSydle(\"createSectorStats\", payload)\n",
-        "time.sleep(0.1)"
+        "time.sleep(0.2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1518,7 +1532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 250,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
